[package]
name = "rec"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.89" }
rand = "0.8.5"
num = "0.4.0"
spinner = "0.5.0"
strum = "0.24.1"
strum_macros = "0.24.1"
terminal-link = "0.1.0"
